# crb_website

./: README.md  pyproject.toml
crb_website/: db.sqlite3  manage.py
crb_website/crb_website/: asgi.py  settings.py  urls.py  wsgi.py
crb_website/main/: urls.py  views.py
crb_website/main/templates/about/: departments.html  history.html  procedures.html  rating_score.html  specialists.html  trade_union.html
crb_website/main/templates/information/: discounted_medicines.html  driving_comission.html  palliative_care.html  unified_health_days.html
crb_website/main/templates/main/: about.html  contacts.html  history.html  information.html  layout.html  main.html
crb_website/main/templates/services/: kab_ endoscopy.html  kab_func_diagnostic.html  kab_uzi.html
crb_website/news/: models.py  views.py
crb_website/news/migrations/: 0001_initial.py  0002_alter_articles_options.py
crb_website/schedule/: admin.py  models.py  urls.py  views.py
crb_website/schedule/migrations/: 0001_initial.py  0002_schedule_location.py  0003_remove_schedule_name_remove_schedule_speciality_and_more.py
crb_website/staff/: admin.py  models.py  urls.py  views.py
crb_website/staff/migrations/: 0001_initial.py  0002_specialist_bio_specialist_category.py  0003_alter_specialist_options_specialist_order.py  0004_specialist_phone.py  0005_alter_specialist_phone.py  0006_alter_specialist_options.py  0007_alter_specialist_category.py  0008_specialist_num_cabinet.py
crb_website/vacancies/: admin.py  models.py  urls.py  views.py
crb_website/vacancies/migrations/: 0001_initial.py
(+9 files in other folders)
